# src/api/reservation/interfaces.ts
@@ -10,3 +10,15 @@ export interface IGetDailyReservationsQuery extends IGetMonthlyReservationsQuery
 }
 
 export interface IAddReservationRequestBody extends IUser, Omit<IReservation, 'userId' | 'createdAt' | 'updatedAt'> {}
+
+export interface ICheckReservationOwnerRequestBody {
+  reservationId: string;
+  studentId: string;
+}
+
+export interface IPatchOrDeleteReservationParam {
+  reservationId: string;
+}
+
+export interface IPatchReservationRequestBody
+  extends Pick<IReservation, 'purpose' | 'year' | 'month' | 'day' | 'startTime' | 'endTime' | 'description'> {}
